Fix numbertext visibility

--- a/app.css
+++ b/app.css
@@ -59,7 +59,8 @@ img {vertical-align: middle;}
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
-  top: 0;
+  top: 35px;
+  z-index: 3;
 }
 
 /* The dots/bullets/indicators */
